kubernetes/manifests/wireguard/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg-easy
  namespace: wireguard
  labels:
    app: wg-easy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: wg-easy
          image: ghcr.io/wg-easy/wg-easy:latest
          ports:
            - name: wireguard
              containerPort: 51820
              protocol: UDP
            - name: web-ui
              containerPort: 51821
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/wireguard
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wireguard-config
